Spacing issue

--- a/frontend/src/components/common/smart/profile/profilePage.scss
+++ b/frontend/src/components/common/smart/profile/profilePage.scss
@@ -37,6 +37,8 @@
 
   .requiredText {
     color: red;
+    margin-top: 1px;
+    margin-bottom: 0px;
   }
 
   .css-7k4hlh-MuiFormLabel-root-MuiInputLabel-root {
